# heat_pump_project

./: .gitignore  LICENSE  LICENSE-DOCS  NEXT.md  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/forecast/: __init__.py  calibrate.py  climate.py  cop.py  cost.py  demand.py  monte_carlo.py
backend/app/models/: __init__.py  calibration.py  forecast.py
backend/scripts/: build_eval_dataset.py  compute_crpss_baseline.py  fetch_heatpumpmonitor.py  prefetch_climate_cache.py  run_calibration_eval.py
backend/tests/: test_calibrate.py  test_climate.py  test_cop.py  test_cost.py  test_demand.py  test_main.py  test_monte_carlo.py  test_orchestrator.py  test_reference_cases.py  test_run_calibration_eval.py
backend/tests/fixtures/: trip2nd.json  twentyman.json
data/heatpumpmonitor/: README.md
data/heatpumpmonitor/climate_cache/: 42.2292_-72.7287_20.parquet  42.2292_-72.7287_20_full.parquet  45.9601_-66.6229_20.parquet  45.9601_-66.6229_20_full.parquet  46.7053_6.8388_20.parquet  46.7053_6.8388_20_full.parquet  48.2511_17.0583_20.parquet  48.2511_17.0583_20_full.parquet  50.4124_-5.0849_20.parquet  50.4124_-5.0849_20_full.parquet  50.4475_-4.6223_20.parquet  50.4475_-4.6223_20_full.parquet  50.4973_-4.0846_20.parquet  50.4973_-4.0846_20_full.parquet  50.5336_-3.6013_20.parquet  50.5336_-3.6013_20_full.parquet  50.5500_-4.1450_20.parquet  50.5500_-4.1450_20_full.parquet  50.7772_0.1142_20.parquet  (+578 more)
docs/: BUILD.md  CALIBRATION_METHODOLOGY.md  CALIBRATION_METHODOLOGY_V1_1.md  CALIBRATION_REPORT_V1.md  MODEL.md  V1_DIAGNOSTIC_FINDINGS.md  V2_BACKLOG.md
